# quiz_django

./: README.md  pyproject.toml  setup.cfg
backend/config/: settings.py
