[tool.poetry]
name = "quiz-django"
version = "0.1.0"
description = ""
authors = ["atikhonov <aleksandrtikhonov91@gmail.com>"]
readme = "README.md"
packages = [{include = "quiz_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
